--- a/src/_layout/spec.njk
+++ b/src/_layout/spec.njk
@@ -1,14 +1,11 @@
 {%- extends 'htmleton.njk' -%}
 {%- block head -%}
     <link rel="stylesheet" href="css/spec-extra.css"/>    
-    <script src='https://www.w3.org/Tools/respec/respec-w3c-common' class='remove' defer="defer"></script>
+    <script src='https://www.w3.org/Tools/respec/respec-w3c' class='remove' defer="defer"></script>
     <script class='remove'>
         var respecConfig = {
         specStatus: "CG-DRAFT",
-        // specStatus: "ED"
-        wg: "Synchronized Media for Publications Community Group",
-        wgURI: "https://www.w3.org/community/sync-media-pub/",
-        wgPublicList: "public-sync-media-pub",
+        group: "sync-media-pub",
         editors: [{
             name: "Marisa DeMeglio",
             company: "DAISY Consortium",
@@ -19,12 +16,10 @@
             company: "Colibrio AB",
             companyURL: "https://colibrio.com"
         }],
-        edDraftURI: "https://w3c.github.io/sync-media-pub/{{page.url}}",
+        edDraftURI: "https://w3c.github.io/sync-media-pub{{page.url}}",
         shortName: "sync-media-pub",
         noRecTrack: true,
         copyrightStart: "2019",
-        // prevRecURI: "",
-        //postProcess: [create_wp],
         includePermalinks: true,
         permalinkEdge: true,
         permalinkHide: false,
@@ -34,6 +29,7 @@
             branch: "master"
         },
         localBiblio: {},
+        xref: "web-platform"
         };
     </script>
 {%- endblock -%}
