docs build process tweaks

--- a/docs-src/_layout/page.njk
+++ b/docs-src/_layout/page.njk
@@ -1,6 +1,6 @@
 {%- extends 'htmleton.njk' -%}
 {%- block head -%}
-<link rel="stylesheet" href="css/page.css"/>
+<link rel="stylesheet" href="/css/page.css"/>
 {%- endblock -%}
 {%- block body -%}
 <h1>{{title}}</h1>
