Fix broken links, be more WCAG conformant

--- a/docs-src/_layout/page.njk
+++ b/docs-src/_layout/page.njk
@@ -3,7 +3,9 @@
 <link rel="stylesheet" href="css/page.css"/>
 {%- endblock -%}
 {%- block body -%}
+<main>
 <h1>{{title}}</h1>
 <p>Last updated {{ page.date.toDateString() }}</p>
 {{ content | safe }}
+</main>
 {%- endblock -%}
