--- a/docs-src/_layout/spec.njk
+++ b/docs-src/_layout/spec.njk
@@ -1,6 +1,6 @@
 {%- extends 'htmleton.njk' -%}
 {%- block head -%}
-    <link rel="stylesheet" href="/css/spec-extra.css"/>    
+    <link rel="stylesheet" href="css/spec-extra.css"/>    
     <script src='https://www.w3.org/Tools/respec/respec-w3c' class='remove' defer="defer"></script>
     <script class='remove'>
         var respecConfig = {
