--- a/docs/demos/raven/style.css
+++ b/docs/demos/raven/style.css
@@ -70,15 +70,15 @@ summary h2 {
     accent-color: var(--checkbox-color);
 }
 
-::highlight(Stanza) {
+::highlight(Stanzas) {
     background-color: var(--highlight-stanza);
 }
 
-::highlight(Line) {
+::highlight(Lines) {
     text-decoration: none;
     background-color: var(--highlight-line);
 }
-::highlight(Word) {
+::highlight(Words) {
     text-decoration: underline;
     text-decoration-style:dotted;
     text-decoration-thickness: 2px;
